# Swanlake

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  NON-GOALS.md  NOTICE  README.md  THREAT-MODEL.md  pyproject.toml  setup.py
.claude/: settings.json
.claude/agents/: swanlake-pre-publish.md  threat-model-honesty-reviewer.md
.claude/hooks/: canary-literal-block.sh  run-package-tests.sh
.claude/skills/canary-rotate/: SKILL.md
.claude/skills/swanlake-release/: SKILL.md
.github/workflows/: test.yml
canon/: notion-template.md  operating-rules.md  vault-template.md
defense-beacon/: README.md  SPEC.md
defense-beacon/examples/synthetic-saas/: README.md
defense-beacon/reference/: beacon-template-v1.md  canary-match.sh  make-canaries.py  surfaces.example.yaml  verify-beacons.py  verify.example.yaml
defense-beacon/reference/tests/: canary_match_test.sh  make_canaries_test.py
docs/: adversarial-research-pattern.md  edge-case-audit-2026-04-27.md  full-repo-audit-2026-04-27.md  how-this-fits-above-native-claude-code.md  migrating-from-v0.1.md  reflex-purity-pattern.md  swanlake-no-beacon.md  v0.2-unified-cli-spec.md  v0.3-beacon-deploy-spec.md  v0.3.x-worktree-install-isolation-spec.md  v0.4-enforcement-spec.md
experiments/white-cells/: OPERATOR-SETUP.md  README.md  ROUTINE-SPEC.md  SPEC.md  __init__.py  atlas-taxonomy.yaml  requirements.txt
experiments/white-cells/fixtures/: __init__.py  mock_github.py  mock_notion.py  mock_vercel.py  sandbox.py
experiments/white-cells/fixtures/sandbox_targets/: __init__.py
experiments/white-cells/personas/: __init__.py  base.py  beacon_burner.py  hook_fuzzer.py  multi_turn_crescendo.py  reflex_smuggler.py  research_poisoner.py  zone_climber.py
experiments/white-cells/supervisor/: __init__.py  auto_triage.py  canary_filter.py  closure_rate.py  file_findings.py  isolation.py  orchestrator.py  preflight.py  schema.py  sink.py
experiments/white-cells/tests/: test_white_cells.py  test_white_cells_phase_2_3.py
reconciler/: OPERATOR-SETUP.md  README.md  acks.py  cli.py  config.py  divergence.py  init.py  status.py  sync_notion.py  sync_vault.py
reconciler/templates/: config.example.toml  swanlake-vault-sync.service  swanlake-vault-sync.timer
reconciler/tests/: test_ack.py  test_cli.py  test_config.py  test_divergence.py  test_init.py  test_status.py  test_sync_notion.py  test_sync_vault.py
reflex-purity/: PAPER.md  README.md
swanlake/: __init__.py  __main__.py  _compat.py  audit.py  cli.py  coverage.py  exit_codes.py  install_marker.py  output.py  safety.py  scan.py  state.py
swanlake/adapters/: __init__.py
swanlake/adapters/templates/cc/: SKILL.md  bash-firewall.sh  canary-match.sh  content-safety-check.sh  exfil-monitor.sh
swanlake/commands/: __init__.py  bench.py  coverage.py  doctor.py  init.py  reconciler.py  scan.py  status.py  sync.py  verify.py
swanlake/commands/adapt/: __init__.py  base.py  cc.py  cma.py  sdk.py
swanlake/commands/beacon/: __init__.py  _history.py  _local.py  _optout.py  _registry.py  _surfaces.py  checklist.py  deploy.py  list.py  sweep.py  verify.py
swanlake/commands/init_project/: __init__.py  scaffold.py
swanlake/tests/: test_adapt_cc.py  test_adapt_cma.py  test_audit.py  test_beacon_checklist.py  test_beacon_cli.py  test_beacon_deploy.py  test_beacon_doctor_probe.py  test_beacon_history.py  test_beacon_list.py  test_beacon_optout.py  test_beacon_surfaces.py  test_beacon_sweep.py  test_beacon_verify.py  test_bench_cmd.py  test_cli_install_drift_warning.py  test_coverage.py  test_doctor_cmd.py  test_doctor_install_marker_probe.py  test_exit_codes.py  test_init_cmd.py  test_init_project.py  test_install_marker.py  test_output.py  test_reconciler_cmd.py  test_safety.py  test_scan.py  test_session_nudge.py  test_state.py  test_status_cmd.py  test_sync_cmd.py  test_v04_cli_wiring.py  test_verify_cmd.py  test_version.py
tools/: README.md  loop-closure-metric.py  status-segment.py  sync-posture.py
tools/tests/: loop_closure_metric_test.py  status_segment_test.py
trust-zones/: README.md  SPEC.md
trust-zones/examples/synthetic-agent-pack/: zones.yaml
trust-zones/reference/: apply-mcp-scopes.sh  zones.example.yaml
trust-zones/reference/tests/: apply_mcp_scopes_test.sh
(+20 files in other folders)
