[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swanlake-cli"
version = "0.2.2"
description = "Swanlake unified CLI — composite posture command consolidating reconciler, canary, exfil, content-safety, closure, coverage, and bench dimensions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Swanlake contributors" }]
keywords = ["swanlake", "posture", "reconciler", "canary", "defense"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
# Stdlib-only at runtime. tomllib is in 3.11+; argparse, fcntl, json, etc. are stdlib.
dependencies = []

[project.optional-dependencies]
# Heavy benchmark stack. Pulled in only when the operator opts into bench --full.
# Versions intentionally loose; v0.2 has bench --full as a stub anyway.
bench = [
  "pyrit>=0.5",
  "garak>=0.9",
]

[project.scripts]
swanlake = "swanlake.__main__:main"

[tool.setuptools]
# Both packages ship together. The reconciler keeps its own CLI entry point
# (`python3 -m reconciler.cli`) so the existing systemd timer keeps working.
#
# `swanlake.tests` is intentionally NOT shipped in the wheel: the test
# suite + fixtures bloat the install footprint and let users
# `import swanlake.tests` and inadvertently rely on internals that
# carry no stability guarantee. Tests still run from the dev checkout
# (the directory is on disk; only the installed wheel changes).
packages = [
  "swanlake",
  "swanlake.commands",
  "swanlake.commands.adapt",
  "swanlake.adapters",
  "reconciler",
]
include-package-data = true

[tool.setuptools.package-data]
"swanlake.adapters" = [
  "templates/cc/*.sh",
  "templates/cc/skills/*/SKILL.md",
  "templates/cma/*.yaml",
]

[tool.setuptools.exclude-package-data]
# `include-package-data = true` would otherwise sweep tests/ into the
# wheel as data files for the parent `swanlake` package, even though
# `swanlake.tests` is no longer in the packages list. Block the whole
# tests subtree so wheel builds carry zero test artifacts.
"swanlake" = ["tests/*", "tests/**/*"]
